registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 5000
          resources:
            limits:
              cpu: 1000m
              memory: 2000Mi
            requests:
              cpu: 1000m
              memory: 1000Mi
          volumeMounts:
            - name: registry-vol
              mountPath: /var/lib/registry
      volumes:
        - name: registry-vol
          persistentVolumeClaim:
            claimName: registry-vol
