jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: admin
      port: 8080
      targetPort: 8080
    - name: agent
      port: 32767
      targetPort: 32767
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: jenkins.xiaomo.site
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccount: jenkins
      containers:
        - name: jenkins
          image: buxiaomo/jenkins:2.233
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 32767
          resources:
            limits:
              cpu: 1000m
              memory: 2000Mi
            requests:
              cpu: 1000m
              memory: 1000Mi
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: jenkins-vol
              mountPath: /var/jenkins_home
            - name: casc-configs
              mountPath: /var/jenkins_home/casc_configs/jenkins.yaml
              subPath: jenkins.yaml
            - name: kubeconfig
              mountPath: /root/.kube/config
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: jenkins-vol
        - name: casc-configs
          configMap:
            defaultMode: 0600
            name: jenkins
        - name: kubeconfig
          hostPath:
            path: /root/.kube/config
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
